syntax = "proto2";

package frankenpaxos.simplebpaxos;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.simplebpaxos"
  flat_package: true
};

message HostPortProto {
  required string host = 1;
  required int32 port = 2;
}

message NettyConfigProto {
  required int32 f = 1;
  repeated HostPortProto leaderAddress = 2;
  repeated HostPortProto depServiceNodeAddress = 3;
  repeated HostPortProto proposerAddress = 4;
  repeated HostPortProto acceptorAddress = 5;
  repeated HostPortProto replicaAddress = 6;
  repeated HostPortProto garbageCollectorAddress = 7;
}
