syntax = "proto2";

package frankenpaxos.statemachine;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.statemachine"
  flat_package: true
};

// Helpers /////////////////////////////////////////////////////////////////////
message KeyValuePair {
  required string key = 1;
  required string value = 2;
}

message KeyValueStoreProto {
  repeated KeyValuePair kv = 1;
}

// Requests ////////////////////////////////////////////////////////////////////
message SetRequest {
  required string key = 1;
  required string value = 2;
}

message GetRequest {
  required string key = 1;
}

message KeyValueStoreRequest {
  oneof request {
    GetRequest get_request = 1;
    SetRequest set_request = 2;
  }
}

// Replies /////////////////////////////////////////////////////////////////////
message SetReply {}

message GetReply {
  optional string value = 1;
}

message KeyValueStoreReply {
  oneof reply {
    GetReply get_reply = 1;
    SetReply set_reply = 2;
  }
}

// Input and output ////////////////////////////////////////////////////////////
message KeyValueStoreInput {
  repeated KeyValueStoreRequest batch = 1;
}

message KeyValueStoreOutput {
  repeated KeyValueStoreReply batch = 2;
}
